infra/k3s/mon-pmth-almg-comb.yml
# 
# 1. Deployment
# 2. Service as NodePort: 31000
# 
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: alertmanager
  namespace: prod
spec:
  replicas: 1
  selector:
    matchLabels:
      app: alertmanager
  template:
    metadata:
      labels:
        app: alertmanager
    spec:
      containers:
      - name: alertmanager
        image: prom/alertmanager:latest
        args:
          - "--config.file=/etc/alertmanager/config.yml"
          - "--storage.path=/alertmanager"
        ports:
        - name: alertmanager
          containerPort: 9093
        resources:
          requests:
            cpu: 50m
            memory: 100Mi
          limits:
            cpu: 150m
            memory: 150Mi
        volumeMounts:
        - name: config-volume
          mountPath: /etc/alertmanager
        - name: alertmanager
          mountPath: /alertmanager
      volumes:
      - name: config-volume
        configMap:
          name: alertmanager
      - name: alertmanager
        emptyDir: {}
---
apiVersion: v1
kind: Service
metadata:
  name: alertmanager
  namespace: prod
  annotations:
    prometheus.io/scrape: 'true'
    prometheus.io/port: '9093'
spec:
  selector: 
    app: alertmanager
  type: NodePort  
  ports:
    - port: 9093
      targetPort: 9093
      nodePort: 31000
---
