infra/k3s/nginx-combined.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-deployment
  namespace: dev-namespace
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
      - name: nginx
        image: nginx:1.19.10
        ports:
        - containerPort: 80
        volumeMounts:
        - name: custom-content
          mountPath: /usr/share/nginx/html/index.html
          subPath: index.html
      volumes:
      - name: custom-content
        configMap:
          name: nginx-custom-content
---
apiVersion: v1
kind: Service
metadata:
  name: nginx-service
  namespace: dev-namespace
spec:
  selector:
    app: nginx
  type: NodePort
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
      nodePort: 30001
---
